Added Jubotron and css overide

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <Title>Try Travel Adventures</Title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -43,10 +43,29 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h3>See What The World Has To Offer</h3>
-        <p>Book your amazing experience with us</p>
+    <div class="jumbotron">
+        <div class="container"></div>
+            <h1>See What The World Has To Offer</h1>
+            <p>Book your amazing experience with us</p>
+         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                Destination
+            </div>
+            <div class="col-sm-3">
+                Check-in date
+            </div>
+            <div class="col-sm-3">
+                Check-out date
+            </div>
+            <div class="col-sm-3">
+                Price Limit
+            </div>
+        </div>
+
 
 </body>
 
