--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span
                             class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Page 1-1</a></li>
-                        <li><a href="#">Page 1-2</a></li>
-                        <li><a href="#">Page 1-3</a></li>
+                        <li><a href="#">Who We are</a></li>
+                        <li><a href="#">What we Do</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Destination</a></li>
@@ -49,27 +49,108 @@
             <p>Book your amazing experience with us</p>
          </div>
     </div> -->
-<section class="hero">
-    <div class="hero-inner">
-        <h1>See What the World Has to Offer</h1>
-        <h2>Book your amazing exprience with us</h2>
-        <a href="https://example.com/" class="btn">Start your booking</a>
-    </div>
+    <section class="hero">
+        <div class="hero-inner">
+            <h1>See What the World Has to Offer</h1>
+            <h2>Book your amazing exprience with us</h2>
+            <a href="https://example.com/" class="btn">Start your booking</a>
+        </div>
+
     </section>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec nibh molestie, efficitur leo sed, viverra nunc. Donec vehicula accumsan erat facilisis ullamcorper. Donec commodo quis dui nec placerat. Donec mi orci, scelerisque eget nisl ac, hendrerit condimentum odio. Nam dictum odio eget quam tempus, a mattis odio ornare. Nullam auctor libero ut libero suscipit, ut accumsan nunc condimentum. Donec ullamcorper maximus sapien quis egestas.</p>
-        <p>Mauris viverra scelerisque lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce ultrices enim sit amet elit tincidunt maximus. Suspendisse vitae pellentesque lectus. Duis commodo leo suscipit augue mollis, non venenatis dolor ullamcorper. Duis tincidunt scelerisque lacus, vel vehicula leo consectetur vel. Duis posuere nisl non odio consequat ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p>Etiam a leo nec mi blandit euismod. Etiam fringilla odio vitae risus ornare, id bibendum velit consequat. Fusce posuere risus sollicitudin condimentum ultrices. Fusce gravida, purus eget laoreet mattis, velit sapien ultrices diam, id dapibus erat leo id quam. Maecenas quis risus convallis, placerat elit non, iaculis tortor. Nullam porttitor magna risus, quis bibendum metus tincidunt in. Etiam vel ligula ac risus mattis tincidunt vel sit amet ante. Morbi et viverra ligula. Ut ac dignissim nisi, condimentum imperdiet mauris. Pellentesque ut ipsum vel diam tristique faucibus eu et lectus. Maecenas posuere neque non lacus bibendum, sit amet pharetra justo semper. Sed mi risus, tempor sit amet ligula eget, varius pretium est. Sed a odio in orci accumsan pretium suscipit ut quam.</p>
-     </main>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec nibh molestie, efficitur leo sed,
+            viverra nunc. Donec vehicula accumsan erat facilisis ullamcorper. Donec commodo quis dui nec placerat. Donec
+            mi orci, scelerisque eget nisl ac, hendrerit condimentum odio. Nam dictum odio eget quam tempus, a mattis
+            odio ornare. Nullam auctor libero ut libero suscipit, ut accumsan nunc condimentum. Donec ullamcorper
+            maximus sapien quis egestas.</p>
+        <p>Mauris viverra scelerisque lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
+            ridiculus mus. Fusce ultrices enim sit amet elit tincidunt maximus. Suspendisse vitae pellentesque lectus.
+            Duis commodo leo suscipit augue mollis, non venenatis dolor ullamcorper. Duis tincidunt scelerisque lacus,
+            vel vehicula leo consectetur vel. Duis posuere nisl non odio consequat ultrices. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit.</p>
+        <p>Etiam a leo nec mi blandit euismod. Etiam fringilla odio vitae risus ornare, id bibendum velit consequat.
+            Fusce posuere risus sollicitudin condimentum ultrices. Fusce gravida, purus eget laoreet mattis, velit
+            sapien ultrices diam, id dapibus erat leo id quam. Maecenas quis risus convallis, placerat elit non, iaculis
+            tortor. Nullam porttitor magna risus, quis bibendum metus tincidunt in. Etiam vel ligula ac risus mattis
+            tincidunt vel sit amet ante. Morbi et viverra ligula. Ut ac dignissim nisi, condimentum imperdiet mauris.
+            Pellentesque ut ipsum vel diam tristique faucibus eu et lectus. Maecenas posuere neque non lacus bibendum,
+            sit amet pharetra justo semper. Sed mi risus, tempor sit amet ligula eget, varius pretium est. Sed a odio in
+            orci accumsan pretium suscipit ut quam.</p>
+    </main>
+
+    <div class="col-md-12">
+        <div class="search">
+            <form action="#" class="search-property-1">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label for="#">Destination</label>
+                            <div class="form-field">
+                                <div class="icon"><span class="ion-ios-search"></span></div>
+                                <input type="text" class="form-control" placeholder="Search place">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label for="#">Check-in date</label>
+                            <div class="form-field">
+                                <div class="icon"><span class="ion-ios-calendar"></span></div>
+                                <input type="text" class="form-control checkin_date" placeholder="Check In Date">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label for="#">Check-out date</label>
+                            <div class="form-field">
+                                <div class="icon"><span class="ion-ios-calendar"></span></div>
+                                <input type="text" class="form-control checkout_date" placeholder="Check Out Date">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label for="#">Price Limit</label>
+                            <div class="form-field">
+                                <div class="select-wrap">
+                                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                                    <select name="" id="" class="form-control">
+                                        <option value="">$5,000</option>
+                                        <option value="">$10,000</option>
+                                        <option value="">$50,000</option>
+                                        <option value="">$100,000</option>
+                                        <option value="">$200,000</option>
+                                        <option value="">$300,000</option>
+                                        <option value="">$400,000</option>
+                                        <option value="">$500,000</option>
+                                        <option value="">$600,000</option>
+                                        <option value="">$700,000</option>
+                                        <option value="">$800,000</option>
+                                        <option value="">$900,000</option>
+                                        <option value="">$1,000,000</option>
+                                        <option value="">$2,000,000</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg align-self-end">
+                        <div class="form-group">
+                            <div class="form-field">
+                                <input type="submit" value="Search" class="form-control btn btn-primary">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 
 
 
 
-
-
-
-
-
+   <!-- 
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
@@ -84,8 +165,10 @@
             <div class="col-sm-3">
                 Price Limit
             </div>
-        </div>
+        </div> -->
 
+<!--ionic.io/ionicons/v4/usage To enable search/icons-->
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
 </body>
 
