--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="hero-inner">
             <h1>See What the World Has to Offer</h1>
             <h2>Book your amazing exprience with us</h2>
-            <a href="https://example.com/" class="btn">Start your booking</a>
+            <a href="https://example.com/" class="btn">Book Here</a>
         </div>
 
     </section>
@@ -86,7 +86,6 @@
                         <div class="form-group">
                             <label for="#">Destination</label>
                             <div class="form-field">
-                                <div class="icon"><span class="ion-ios-search"></span></div>
                                 <input type="text" class="form-control" placeholder="Search place">
                             </div>
                         </div>
@@ -95,8 +94,7 @@
                         <div class="form-group">
                             <label for="#">Check-in date</label>
                             <div class="form-field">
-                                <div class="icon"><span class="ion-ios-calendar"></span></div>
-                                <input type="text" class="form-control checkin_date" placeholder="Check In Date">
+                                <input type="date" class="checkin_date" placeholder="Check In Date">
                             </div>
                         </div>
                     </div>
@@ -104,8 +102,7 @@
                         <div class="form-group">
                             <label for="#">Check-out date</label>
                             <div class="form-field">
-                                <div class="icon"><span class="ion-ios-calendar"></span></div>
-                                <input type="text" class="form-control checkout_date" placeholder="Check Out Date">
+                                <input type="date" class="checkout_date" placeholder="Check Out Date">
                             </div>
                         </div>
                     </div>
@@ -114,7 +111,6 @@
                             <label for="#">Price Limit</label>
                             <div class="form-field">
                                 <div class="select-wrap">
-                                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
                                     <select name="" id="" class="form-control">
                                         <option value="">$5,000</option>
                                         <option value="">$10,000</option>
@@ -150,25 +146,7 @@
 
 
 
-   <!-- 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                Destination
-            </div>
-            <div class="col-sm-3">
-                Check-in date
-            </div>
-            <div class="col-sm-3">
-                Check-out date
-            </div>
-            <div class="col-sm-3">
-                Price Limit
-            </div>
-        </div> -->
-
-<!--ionic.io/ionicons/v4/usage To enable search/icons-->
-        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+ 
 
 </body>
 
