Added signup.html and signup.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-</html>
+
 
 <head>
     <title>Try Travel Adventures</title>
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <Title>Try Travel Adventures</Title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -37,8 +38,8 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
         </div>
     </nav>
@@ -58,6 +59,26 @@
 
     </section>
     <main>
+        <Section class="Tours">
+            <h2> <b>Our Featured Tours</h2> </b>
+            <div class="row mt-4 mb-5 text-center flex-wrap">
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/abudhabi.png">
+                    <p class="display-7">
+                        Abu Dhabi</p>
+                </div>
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/thailand.png">
+                    <p class="display-7">
+                        Thailand</p>
+                </div>
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/france.png">
+                    <p class="display-7">
+                        France</p>
+                </div>
+            </div>
+        </Section>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec nibh molestie, efficitur leo sed,
             viverra nunc. Donec vehicula accumsan erat facilisis ullamcorper. Donec commodo quis dui nec placerat. Donec
             mi orci, scelerisque eget nisl ac, hendrerit condimentum odio. Nam dictum odio eget quam tempus, a mattis
@@ -84,7 +105,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <label for="#">Destination</label>
+                            <label for="Destination">Destination</label>
                             <div class="form-field">
                                 <input type="text" class="form-control" placeholder="Search place">
                             </div>
@@ -92,7 +113,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <label for="#">Check-in date</label>
+                            <label for="Check-in-Date">Check-in date</label>
                             <div class="form-field">
                                 <input type="date" class="checkin_date" placeholder="Check In Date">
                             </div>
@@ -146,7 +167,7 @@
 
 
 
- 
+
 
 </body>
 
