--- a/signup.html
+++ b/signup.html
@@ -23,10 +23,10 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Try Travel Adventures</a>
+                <a class="navbar-brand" href="index.html">Try Travel Adventures</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span
                             class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -57,6 +57,28 @@
             <button type="submit" value="Add" name="submit">Submit</button>
         </form>
     </div>
+    <!-- <main>
+        <Section class="Vendors">
+            <h2> <b>Our Featured Vendors</h2> </b>
+            <div class="row mt-4 mb-5 text-center flex-wrap">
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/abudhabi.png">
+                    <p class="display-7">
+                        Abu Dhabi</p>
+                </div>
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/thailand.png">
+                    <p class="display-7">
+                        Thailand</p>
+                </div>
+                <div class="p-2 col-md-4">
+                    <img class="pb-3" src="images/france.png">
+                    <p class="display-7">
+                        France</p>
+                </div>
+            </div>
+        </Section>
+    </main> -->
 </body>
 
 </html>
