--- a/login.html
+++ b/login.html
@@ -31,45 +31,19 @@
                 <li><a href="#">Contact</a></li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
+            
         </div>
     </nav>
     <div class="page-container">
 
         <form action="#" method="POST">
-            <h1>Sign Up</h1>
-            <input type="text" name="name" class="Name" placeholder="Name">
-            <input type="tel" name="tele" class="Tele" placeholder="Number Phone">
+            <h1>Login</h1>
             <input type="email" name="email" class="Email" placeholder="Email">
             <input type="password" name="password" class="Address" placeholder="password">
             <button type="submit" value="Add" name="submit">Submit</button>
         </form>
     </div>
-    <!-- <main>
-        <Section class="Vendors">
-            <h2> <b>Our Featured Vendors</h2> </b>
-            <div class="row mt-4 mb-5 text-center flex-wrap">
-                <div class="p-2 col-md-4">
-                    <img class="pb-3" src="images/abudhabi.png">
-                    <p class="display-7">
-                        Abu Dhabi</p>
-                </div>
-                <div class="p-2 col-md-4">
-                    <img class="pb-3" src="images/thailand.png">
-                    <p class="display-7">
-                        Thailand</p>
-                </div>
-                <div class="p-2 col-md-4">
-                    <img class="pb-3" src="images/france.png">
-                    <p class="display-7">
-                        France</p>
-                </div>
-            </div>
-        </Section>
-    </main> -->
+   
 </body>
 
 </html>
