Updated Destinations with valid url links

--- a/destinations.html
+++ b/destinations.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Try Travel Adventures</a>
+                <a class="navbar-brand" href="index.html">Try Travel Adventures</a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -229,3 +229,38 @@
             </div><!-- End Well -->
         </div>
     </div>
+    
+    <div class="vendors">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <div class="d-flex flex-row mb-3"><img src="/images/american.jfif" width="70">
+                        <div class="d-flex flex-column ml-2"><span>AmericanAir</span><span class="text-black-50">Flights</span><span class="ratings"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span></div>
+                    </div>
+                    <h6>Luxury in the Sky</h6>
+                    <div class="d-flex justify-content-between install mt-3"><span>Installed 172 times</span><span class="text-primary">View&nbsp;<i class="fa fa-angle-right"></i></span></div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <div class="d-flex flex-row mb-3"><img src="/images/ncl.jfif" width="70">
+                        <div class="d-flex flex-column ml-2"><span>NCL</span><span class="text-black-50">Cruises</span><span class="ratings"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span></div>
+                    </div>
+                    <h6>NCL Cruises - Entertainment at Its Best</h6>
+                    <div class="d-flex justify-content-between install mt-3"><span>Booked 1234 times</span><span class="text-primary">View&nbsp;<i class="fa fa-angle-right"></i></span></div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <div class="d-flex flex-row mb-3"><img src="/images/celebrity.jfif" width="70">
+                        <div class="d-flex flex-column ml-2"><span>Celebrity</span><span class="text-black-50">Cruises</span><span class="ratings"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span></div>
+                    </div>
+                    <h6>Celebrity Cruises - Cruise in Luxury</h6>
+                    <div class="d-flex justify-content-between install mt-3"><span>Booked 1234 times</span><span class="text-primary">View&nbsp;<i class="fa fa-angle-right"></i></span></div>
+                </div>
+            </div>
+            </div>
+
+
+         
